# RAG-against-the-machine

./: .gitignore  .nfs0000000005c805ee000002b3  Makefile  README.md  pyproject.toml
data/processed/bm25_index/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
project_management/: PLAN.md  TEST_PLAN.MD
src/: RAGEngine.py  RAG_engine.py  __init__.py  __main__.py  config.py
src/indexer/: ChunkerEngine.py  __init__.py  chunker.py  files.py  index.py  utils.py
src/model/: __init__.py  models.py
src/retriever/: Retriever.py  __init__.py
src/utils/: __init__.py  timer.py  utils.py
student/: __init__.py  __main__.py
student/src/: __init__.py  __main__.py  engine.py
student/src/indexer/: __init__.py  chunker.py  files.py  index.py
student/src/model/: __init__.py  models.py
student/src/utils/: __init__.py  utils.py
test/: test_bm25.py
